force-app/main/default/objects/clofor_com_cfs__Recruitment_CRM__c/clofor_com_cfs__Recruitment_CRM__c.object-meta.xml
<CustomObject>
    <label>Recruitment CRM</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment CRM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>