force-app/main/default/objects/clofor_com_cfs__Recruitment_CRM__c/fields/clofor_com_cfs__Applydate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Applydate__c</fullName>
    <label>Apply date</label>
    <type>Date</type>
</CustomField>