force-app/main/default/objects/clofor_com_cfs__Recruitment_CRM__c/fields/clofor_com_cfs__Candidatesource__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Candidatesource__c</fullName>
    <label>Candidate&apos;s source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Hiring Agency</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>