force-app/main/default/objects/clofor_com_cfs__Recruitment_CRM__c/fields/clofor_com_cfs__Dateofbirth__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Dateofbirth__c</fullName>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>