force-app/main/default/objects/clofor_com_cfs__Recruitment_CRM__c/fields/clofor_com_cfs__Mobile__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>