force-app/main/default/objects/clofor_com_cfs__Recruitment_CRM__c/fields/clofor_com_cfs__Offer_Letter__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Offer_Letter__c</fullName>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for send</fullName>
                <default>true</default>
                <label>Waiting for send</label>
            </value>
            <value>
                <fullName>Sent Offer Letter</fullName>
            </value>
            <value>
                <fullName>Candidate Reject</fullName>
            </value>
            <value>
                <fullName>Candidate Accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>