force-app/main/default/objects/clofor_com_cfs__Recruitment_CRM__c/fields/clofor_com_cfs__Recruitmentprocess__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Recruitmentprocess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Process</label>
    <referenceTo>clofor_com_cfs__Recruitment_Process__c</referenceTo>
    <relationshipLabel>Recruitment CRM</relationshipLabel>
    <relationshipName>Recruitment_CRM</relationshipName>
    <type>Lookup</type>
</CustomField>