force-app/main/default/objects/clofor_com_cfs__Recruitment_CRM__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Applydate__c</columns>
    <columns>clofor_com_cfs__Jobopening__c</columns>
    <columns>clofor_com_cfs__Candidatesource__c</columns>
    <columns>clofor_com_cfs__Dateofbirth__c</columns>
    <columns>clofor_com_cfs__Currentaddress__c</columns>
    <columns>clofor_com_cfs__Experienceinthisposition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>